fix delete prompt z-index

--- a/app/assets/stylesheets/components/note-index.scss
+++ b/app/assets/stylesheets/components/note-index.scss
@@ -143,7 +143,6 @@ $ever-grey: #dedede;
   position:absolute;
   align-items: center;
   left:0px;
-  z-index: 2000;
   background: #393d41;
   color: white;
   width:97%;
